<resources>
    <string name="app_name">MyerList</string>
    <string name="myer">Myer</string>
    <string name="list">List</string>
    <string name="loginBtn">登录</string>
    <string name="registerBtn">注册</string>
    <string name="offlineBtn">离线模式</string>
    <string name="action_settings">Settings</string>
    <string name="Subtitle">在 Windows 和 Android 设备同步待办事项</string>
    <string name="loginHint">登录以在各个设备同步</string>
    <string name="emailHint">邮件</string>
    <string name="passwordHint">密码</string>
    <string name="repasswordHint">确认密码</string>
    <string name="title_activity_login">登录</string>
    <string name="FontLight">sans-serif-light</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_main">MyerList</string>
    <string name="account_text">ACCOUNT</string>
    <string name="title_section1">待办事项</string>
    <string name="title_section2">已删除</string>
    <string name="title_section3">设置</string>
    <string name="title_section4">关于</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="deleteditems">已删除</string>
    <string name="settings">设置</string>
    <string name="about">ABOUT</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="shared_logininfo_file">login_info</string>
    <string name="logout_content">确认登出？</string>
    <string name="logout_title">注意</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_setting">设置</string>
    <string name="tap_keyboard_block">添加的时候自动弹出键盘</string>
    <string name="tap_bottom_block">新项目添加到末端</string>
    <string name="user_hobbit_block">用户习惯</string>
    <string name="lang_block">语言</string>
    <string name="logout">登出</string>
    <string name="ok_btn">确认</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="new_memo_title">添加待办事项</string>
    <string name="new_memo_hint">例如：晚上跟好基友打球。</string>
    <string name="loading_hint">加载中...</string>
    <string name="vaild_email">请输入有效的电子邮件</string>
    <string name="valid_password">两次输入的密码无效</string>
    <string name="about_myerlist">MyerList for Windows</string>
    <string name="credit">开发者</string>
    <string name="feedback">反馈</string>
    <string name="version">版本</string>
    <string name="feedback_content">请通过邮件尽情反馈。</string>
    <string name="about_content">Search MyerList on Store on Windows 10.</string>
    <string name="chinese">简体中文</string>
    <string name="change_lang">选择语言</string>
    <string name="hand_hobbit_block">右手使用习惯</string>
    <string name="add_success">New memo added ;-)</string>
    <string name="login_success">登录成功</string>
    <string name="rebootHint">重启应用以生效</string>
    <string name="version_value">3.0.0</string>
    <string name="hello_blank_fragment">现在登录</string>
    <string name="now_to_login">现在登录</string>
    <string name="user_dont_exist">用户不存在</string>
    <string name="fail_to_login">登录失败，请重试</string>
    <string name="fail_to_register">注册失败 :-(</string>
    <string name="two_ps_match">请确认两次密码相同</string>
    <string name="confirm_ps_lost">请再次输入密码</string>
    <string name="ps_lost">请输入密码</string>
    <string name="email_invalid">请输入格式正确的邮箱</string>
    <string name="no_content">任务完成</string>
    <string name="no_deleted_content_hint">删除了的待办事项将会出现在这里</string>
    <string name="no_todo_content_hint">享受这一天 ;-)</string>
    <string name="deleteall_alert">这将清空已删除列表</string>
    <string name="open_src">开源项目</string>
    <string name="modify_memo_title">修改待办事项</string>
    <string name="cate_default">所有</string>
    <string name="cate_work">工作</string>
    <string name="cate_life">生活</string>
    <string name="cate_family">家庭</string>
    <string name="cate_enter">娱乐</string>
    <string name="account_concern">Account</string>
    <string name="adding_hint">e.g. Grab a coffee with my friends.</string>
    <string name="adding_title">Adding</string>
    <string name="no_deleted">没有内容</string>
    <string name="about_link">Website</string>
    <string name="umeng_common_icon">图标</string>
    <string name="UMUpdateCheck">2.6.0.1.20150312</string>
    <string name="Syncing...">Syncing...</string>
    <string name="Synced">Synced</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="NoNetworkHint">No network.</string>
    <string name="undone_hint">Left</string>
    <string name="hint_input_email">Please input email</string>
    <string name="hint_email_not_exist">Account not existed</string>
    <string name="hint_email_not_invalid">Invalid email</string>
    <string name="hint_input_psd">Please input password</string>
    <string name="hint_input_repsd">Please confirm your passwords</string>
    <string name="hint_psd_not_match">Confirm your passwords matched</string>
    <string name="hint_email_exist">The email has been registered</string>
    <string name="hint_login_successfully">Successfully logined :P</string>
    <string name="hint_login_fail">Failed to login</string>
    <string name="hint_register_fail">Failed to register</string>
    <string name="hint_wrong_psd">Wrong password</string>
    <string name="hint_empty_input">Please input your memo.</string>
    <string name="about_feedback">FEEDBACK</string>
    <string name="about_feedback__content">Send me email</string>
    <string name="about_download_btn">Download now</string>
    <string name="cate_deleted">Deleted</string>
    <string name="cate_per">Personalization</string>
    <string name="hint_personalize">Still working on it, you can personalize your categories on Windows version</string>
    <string name="LoginActivity_Forget_PWD">Forget password?</string>
    <string name="forget_pwd_title">Notice</string>
    <string name="forget_pwd_content">需要修改密码，请直接发邮件联系我。</string>
    <string name="forget_pwd_send_email">EMAIL ME</string>
    <string name="forget_pwd_cancel">CANCEL</string>
    <string name="hint_request_fail">Failed to send request,please check your internet</string>
    <string name="cate_per_title">Personalization</string>
    <string name="cate_per_add">Add a new category</string>
    <string name="new_cate_name">New Cate</string>
    <string name="a_cate_per_discard_content">Confirm to exit the page without saving.</string>
    <string name="english">English</string>
    <string name="pick_a_color_title">Pick a color</string>
</resources>
