<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
    android:background="@color/MyerListGray"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200sp"
            android:id="@+id/imageView"
            android:contentDescription="logo"
            android:src="@drawable/myerlist_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/linearLayout">
            <TextView android:text="@string/myer" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:gravity="center"
                android:textColor="@color/MyerListBlue"
                android:textSize="50sp"
                android:fontFamily="sans-serif-light"
                />
            <TextView android:text="@string/list" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:gravity="center"
                android:textColor="@color/MyerListBlue"
                android:textSize="50sp"
                android:fontFamily="sans-serif-bold"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Subtitle"
            android:textColor="@color/MyerListBlueLight"
            android:gravity="center"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginBtn"
            android:layout_marginTop="30sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:textColor="#ffffff"
            android:background="@color/MyerListBlueLight" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerBtn"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:textColor="@color/MyerListBlue"/>
    </LinearLayout>





</RelativeLayout>
