<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment"
    android:background="@color/MyerListGray"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/backgrd"
        android:alpha="0.2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="160sp"
            android:id="@+id/imageView"
            android:contentDescription="logo"
            android:src="@drawable/myerlist_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/linearLayout">
            <TextView android:text="@string/myer" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:gravity="center"
                android:textColor="@color/MyerListBlue"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                />
            <TextView android:text="@string/list" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:gravity="center"
                android:textColor="@color/MyerListBlue"
                android:textSize="40sp"
                android:fontFamily="sans-serif-bold"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Subtitle"
            android:textColor="@color/MyerListBlueLight"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="@string/FontLight"/>
        <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="30sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginLeft="20sp"
                    card_view:cardBackgroundColor="@color/MyerListBlueLight"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="3dp">
            <Button
                android:id="@+id/tologinBtn"
                android:onClick="toLoginClick"
                android:text="@string/loginBtn"
                android:clickable="true"
                android:background="?android:selectableItemBackground"
                android:textColor="#ffffff"
                android:padding="0dp"

                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardBackgroundColor="#ffdbdbdb"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="3dp"
            android:background="#ffdbdbdb">
            <Button
                android:onClick="toRegisterClick"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/registerBtn"
                android:clickable="true"
                android:padding="0dp"

                android:background="?android:selectableItemBackground"
                android:textColor="@android:color/background_dark"/>
            </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginBottom="10sp"
            card_view:cardBackgroundColor="#ffdbdbdb"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="3dp"
            android:background="#ffc5c5c5">
            <Button
                android:onClick="toMainClick"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/offlineBtn"
                android:textColor="@android:color/background_dark"
                android:clickable="true"
                android:background="?android:selectableItemBackground"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>

