<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/MyerListGray"
                tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="24sp"
        android:layout_alignParentTop="true"
        android:alpha="0.15"
        android:elevation="@dimen/statusbar_elevation"
        android:scaleType="fitXY"
        android:src="@drawable/black_mask"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/login_background"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/logintitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10sp"
                    android:gravity="left"
                    android:text="@string/loginBtn"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10sp"
                    android:fontFamily="@string/FontLight"
                    android:gravity="left"
                    android:text="@string/loginHint"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"/>
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="20sp"
                android:hint="@string/emailHint"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/psbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="20sp"
                android:hint="@string/passwordHint"
                android:password="true"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/confirmpsbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="20dp"
                android:hint="@string/repasswordHint"
                android:password="true"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="12sp"/>

            <android.support.v7.widget.CardView
                android:id="@+id/loginBtn_cardview"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="30sp"
                card_view:cardBackgroundColor="@color/MyerListBlueLight"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="3dp">

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:clickable="true"
                    android:onClick="Login_Click"
                    android:text="@string/loginBtn"
                    android:textColor="#ffffff"
                    />
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
