<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/MyerListGray"
                tools:context="activity.SettingActivity">

    <ImageView
        android:id="@+id/activity_setting_mask_iv"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:alpha="0.3"
        android:contentDescription="@string/image_const"
        android:elevation="@dimen/statusbar_elevation"
        android:scaleType="fitXY"
        android:src="@drawable/black_mask"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginLeft="-10dp"
                  android:layout_marginRight="-10dp"
                  android:layout_marginTop="-10dp"
                  android:orientation="vertical"
                  android:paddingBottom="0dp"
                  android:paddingLeft="0dp"
                  android:paddingRight="0dp"
                  android:paddingTop="0dp"
                  tools:context="com.ex.SettingActivity">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            card_view:cardElevation="0dp"
            card_view:cardBackgroundColor="@android:color/transparent"
            card_view:cardCornerRadius="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@android:color/transparent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/settings"
                    android:textColor="@color/MyerListBlue"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:paddingBottom="0dp"
                      android:paddingTop="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/user_hobbit_block"
                android:textColor="@color/MyerListBlueLight"
                android:textSize="15sp"
                android:textStyle="normal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/tap_bottom_block"
                        android:textColor="@android:color/black"/>

                    <com.rey.material.widget.Switch
                        android:id="@+id/activity_setting_addToEnd_s"
                        style="@style/Material.Widget.Switch"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:checked="true"/>
                </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/lang_block"
                android:textColor="@color/MyerListBlueLight"
                android:textSize="15sp"
                android:textStyle="normal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_setting_language_tv"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/english"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/account_concern"
                android:textColor="@color/MyerListBlueLight"
                android:textSize="15sp"
                android:textStyle="normal"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/activity_setting_logout_tv"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/logout"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>